# ruvector

./: Cargo.toml
crates/ruvector-attention-node/npm/linux-x64-gnu/: attention.linux-x64-gnu.node
crates/ruvector-attention-node/npm/win32-x64-msvc/: attention.win32-x64-msvc.node
crates/ruvector-attention-wasm/pkg/: package.json  ruvector_attention_wasm_bg.wasm
crates/ruvector-gnn-node/npm/darwin-arm64/: ruvector-gnn.darwin-arm64.node
crates/ruvector-gnn-node/npm/darwin-x64/: ruvector-gnn.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/darwin-arm64/: ruvector-graph-transformer.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/darwin-x64/: ruvector-graph-transformer.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/linux-arm64-musl/: ruvector-graph-transformer.linux-arm64-musl.node
crates/ruvector-graph-transformer-wasm/pkg/: package.json  ruvector_graph_transformer_wasm_bg.wasm
crates/ruvector-rairs/: Cargo.toml
crates/ruvector-rairs/benches/: rairs_bench.rs
crates/ruvector-rairs/src/: error.rs  index.rs  ivf.rs  kmeans.rs  lib.rs  main.rs  rairs.rs  seil.rs
docs/adr/: ADR-193-rairs-ivf.md
docs/research/nightly/2026-05-12-rairs-ivf/: README.md
