[package]
name        = "ruvector-rairs"
version     = "0.1.0"
edition     = "2021"
description = "RAIRS IVF: Redundant Assignment with Amplified Inverse Residual — ruvector's first IVF index family"
authors     = ["ruvnet", "claude-flow"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ruvnet/ruvector"
keywords    = ["ann", "ivf", "vector-search", "approximate-nearest-neighbor", "ruvector"]
categories  = ["algorithms", "data-structures"]

[[bin]]
name = "rairs-demo"
path = "src/main.rs"

[dependencies]
rand        = "0.8"
serde       = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion   = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "rairs_bench"
harness = false
